@@ -294,6 +294,9 @@ required in order to produce stack backtraces when
 the program terminates on an uncaught exception (see
 .BR ocamlrun (1)).
 .TP
+.B \-no-g
+Do not record debugging information (default).
+.TP
 .B \-i
 Cause the compiler to print all defined names (with their inferred
 types or their definitions) when compiling an implementation (.ml
